# genv

./: .gitignore  CMakeLists.txt  LICENSE  README.md  commands.txt
_builds/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  genv.sln
_builds/src/: cmake_install.cmake  genv.vcxproj  genv.vcxproj.filters
_builds/src/genv.dir/Debug/: genv.exe.recipe  genv.ilk  genv.vcxproj.FileListAbsolute.txt
_builds/src/genv.dir/Debug/genv.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  genv.lastbuildstate  genv.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
_builds/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
_builds/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
_builds/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
_builds/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
src/: CMakeLists.txt  command_tree.cpp  main.cpp  studio.cpp
src/headers/: chest.h  command_tree.h  general_errors.h  studio.h  utility.h
src/headers/toolkit/: chest.h  str_slice.h
